Adding an instagram field, and removing the phone number field.
 Changes to be committed:
	modified:   ladybrainstudios/footer.php
	modified:   ladybrainstudios/plugins/admin-core/admin-config.php
	modified:   ladybrainstudios/style.css

--- a/ladybrainstudios/style.css
+++ b/ladybrainstudios/style.css
@@ -1472,9 +1472,8 @@ footer {
 }
 .social-footer li{
 	display: inline-block;
-	margin: 15px;
-	padding-right: 15px;
-	margin-left: 0;
+	margin: 15px 0;
+	padding: 0 15px;
 	border-right: 1px solid #fff;
 	font-size: 18px;
 }
